--- a/projetest/Views/Home/sohbet.cshtml
+++ b/projetest/Views/Home/sohbet.cshtml
@@ -9,47 +9,222 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Sohbet</title>
-    <link rel="stylesheet" href="~/assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="~/assets/fonts/font-awesome.min.css">
-    <link rel="stylesheet" href="~/assets/css/styles.min.css">
+    <title>instagramtemplate</title>
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/css/styles.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/css/swiper.min.css">
 </head>
 
 <body>
     <div class="content-wrapper">
-        <section class="article-list" style="color: var(--indigo);background: url(/assets/img/bg-space.jpg), #baafd3;">
-            <div class="container">
-                <div class="intro">
-                    <h2 class="text-center">Bu Sayfa Yapım Aşamasındadır</h2>
-                    <p class="text-center">Kısa sürede tamamlanacaktır</p>
-                </div>
-                <div>
-                    <pre>
-                        
-                    </pre>
-                </div>
+        <div class="content-bg"></div>
+        <div class="bg-overlay"></div>
+        <div class="bootstrap_chat">
+            <div class="container py-5 px-4">
+                <!-- For demo purpose-->
+                <header class="text-center">
+                    <h1 class="display-4 text-white">7 Messenger</h1>
+                </header>
 
-                <div class="row articles">
-                    <div class="col-sm-6 col-md-4 item" style="border-radius: 29px;background: #002868;opacity: 0;margin-top: 0px;margin-right: 20px;width: 371px;padding: 54px 15px 0px;padding-right: 15px;max-width: 30%;margin-bottom: 15px;">
+                <div class="row rounded-lg overflow-hidden shadow">
+                    <!-- Users box-->
+                    <div class="col-5 px-0">
+                        <div class="bg-white">
+
+                            <div class="bg-gray px-4 py-2 bg-light">
+                                <p class="h5 mb-0 py-1">Son Mesajlar</p>
+                            </div>
+
+                            <div class="messages-box">
+                                <div class="list-group rounded-0">
+                                    <a class="list-group-item list-group-item-action active text-white rounded-0">
+                                        <div class="media">
+                                            <img src="https://res.cloudinary.com/mhmd/image/upload/v1564960395/avatar_usae7z.svg" alt="user" width="50" class="rounded-circle">
+                                            <div class="media-body ml-4">
+                                                <div class="d-flex align-items-center justify-content-between mb-1">
+                                                    <h6 class="mb-0">Kaya</h6><small class="small font-weight-bold">25 Dec</small>
+                                                </div>
+                                                <p class="font-italic mb-0 text-small">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
+                                            </div>
+                                        </div>
+                                    </a>
+
+                                    <a href="#" class="list-group-item list-group-item-action list-group-item-light rounded-0">
+                                        <div class="media">
+                                            <img src="https://res.cloudinary.com/mhmd/image/upload/v1564960395/avatar_usae7z.svg" alt="user" width="50" class="rounded-circle">
+                                            <div class="media-body ml-4">
+                                                <div class="d-flex align-items-center justify-content-between mb-1">
+                                                    <h6 class="mb-0">Kaya</h6><small class="small font-weight-bold">14 Dec</small>
+                                                </div>
+                                                <p class="font-italic text-muted mb-0 text-small">Lorem ipsum dolor sit amet, consectetur. incididunt ut labore.</p>
+                                            </div>
+                                        </div>
+                                    </a>
+
+                                    <a href="#" class="list-group-item list-group-item-action list-group-item-light rounded-0">
+                                        <div class="media">
+                                            <img src="https://res.cloudinary.com/mhmd/image/upload/v1564960395/avatar_usae7z.svg" alt="user" width="50" class="rounded-circle">
+                                            <div class="media-body ml-4">
+                                                <div class="d-flex align-items-center justify-content-between mb-1">
+                                                    <h6 class="mb-0">Kaya</h6><small class="small font-weight-bold">9 Nov</small>
+                                                </div>
+                                                <p class="font-italic text-muted mb-0 text-small">consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
+                                            </div>
+                                        </div>
+                                    </a>
+
+                                    <a href="#" class="list-group-item list-group-item-action list-group-item-light rounded-0">
+                                        <div class="media">
+                                            <img src="https://res.cloudinary.com/mhmd/image/upload/v1564960395/avatar_usae7z.svg" alt="user" width="50" class="rounded-circle">
+                                            <div class="media-body ml-4">
+                                                <div class="d-flex align-items-center justify-content-between mb-1">
+                                                    <h6 class="mb-0">Kaya</h6><small class="small font-weight-bold">18 Oct</small>
+                                                </div>
+                                                <p class="font-italic text-muted mb-0 text-small">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
+                                            </div>
+                                        </div>
+                                    </a>
+
+                                    <a href="#" class="list-group-item list-group-item-action list-group-item-light rounded-0">
+                                        <div class="media">
+                                            <img src="https://res.cloudinary.com/mhmd/image/upload/v1564960395/avatar_usae7z.svg" alt="user" width="50" class="rounded-circle">
+                                            <div class="media-body ml-4">
+                                                <div class="d-flex align-items-center justify-content-between mb-1">
+                                                    <h6 class="mb-0">Kaya</h6><small class="small font-weight-bold">17 Oct</small>
+                                                </div>
+                                                <p class="font-italic text-muted mb-0 text-small">consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
+                                            </div>
+                                        </div>
+                                    </a>
+
+                                    <a href="#" class="list-group-item list-group-item-action list-group-item-light rounded-0">
+                                        <div class="media">
+                                            <img src="https://res.cloudinary.com/mhmd/image/upload/v1564960395/avatar_usae7z.svg" alt="user" width="50" class="rounded-circle">
+                                            <div class="media-body ml-4">
+                                                <div class="d-flex align-items-center justify-content-between mb-1">
+                                                    <h6 class="mb-0">Kaya</h6><small class="small font-weight-bold">2 Sep</small>
+                                                </div>
+                                                <p class="font-italic text-muted mb-0 text-small">Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                                            </div>
+                                        </div>
+                                    </a>
+
+                                    <a href="#" class="list-group-item list-group-item-action list-group-item-light rounded-0">
+                                        <div class="media">
+                                            <img src="https://res.cloudinary.com/mhmd/image/upload/v1564960395/avatar_usae7z.svg" alt="user" width="50" class="rounded-circle">
+                                            <div class="media-body ml-4">
+                                                <div class="d-flex align-items-center justify-content-between mb-1">
+                                                    <h6 class="mb-0">Kaya</h6><small class="small font-weight-bold">30 Aug</small>
+                                                </div>
+                                                <p class="font-italic text-muted mb-0 text-small">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
+                                            </div>
+                                        </div>
+                                    </a>
+
+                                    <a href="#" class="list-group-item list-group-item-action list-group-item-light rounded-0">
+                                        <div class="media">
+                                            <img src="https://res.cloudinary.com/mhmd/image/upload/v1564960395/avatar_usae7z.svg" alt="user" width="50" class="rounded-circle">
+                                            <div class="media-body ml-4">
+                                                <div class="d-flex align-items-center justify-content-between mb-3">
+                                                    <h6 class="mb-0">Kaya</h6><small class="small font-weight-bold">21 Aug</small>
+                                                </div>
+                                                <p class="font-italic text-muted mb-0 text-small">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
+                                            </div>
+                                        </div>
+                                    </a>
+
+                                </div>
+                            </div>
+                        </div>
                     </div>
+                    <!-- Chat Box-->
+                    <div class="col-7 px-0">
+                        <div class="px-4 py-5 chat-box bg-white">
+                            <!-- Sender Message-->
+                            <div class="media w-50 mb-3">
+                                <img src="https://res.cloudinary.com/mhmd/image/upload/v1564960395/avatar_usae7z.svg" alt="user" width="50" class="rounded-circle">
+                                <div class="media-body ml-3">
+                                    <div class="bg-light rounded py-2 px-3 mb-2">
+                                        <p class="text-small mb-0 text-muted">Test </p>
+                                    </div>
+                                    <p class="small text-muted">12:00 PM | Aug 13</p>
+                                </div>
+                            </div>
 
-                    <div class="col-sm-6 col-md-4 item" style="border-radius: 29px;background: #002868;opacity: 0.86;border: 1px solid var(--primary);margin-top: 0px;margin-right: 20px;width: 371px;padding: 54px 15px 0px;padding-right: 15px;max-width: 30%;margin-bottom: 15px;">
+                            <!-- Reciever Message-->
+                            <div class="media w-50 ml-auto mb-3">
+                                <div class="media-body">
+                                    <div class="bg-primary rounded py-2 px-3 mb-2">
+                                        <p class="text-small mb-0 text-white">Test </p>
+                                    </div>
+                                    <p class="small text-muted">12:00 PM | Aug 13</p>
+                                </div>
+                            </div>
 
-                        <a href="#"><img class="img-fluid" src="~/video/yapiliyor.gif"></a>
-                        <h7 class="heading" style="color: var(--cyan);"></h7>
-                        <h3 class="name" style="color: var(--cyan);"></h3>
-                        <pre class="description" style="color: #70cee2;"> </pre>
+                            <!-- Sender Message-->
+                            <div class="media w-50 mb-3">
+                                <img src="https://res.cloudinary.com/mhmd/image/upload/v1564960395/avatar_usae7z.svg" alt="user" width="50" class="rounded-circle">
+                                <div class="media-body ml-3">
+                                    <div class="bg-light rounded py-2 px-3 mb-2">
+                                        <p class="text-small mb-0 text-muted">Test</p>
+                                    </div>
+                                    <p class="small text-muted">12:00 PM | Aug 13</p>
+                                </div>
+                            </div>
+
+                            <!-- Reciever Message-->
+                            <div class="media w-50 ml-auto mb-3">
+                                <div class="media-body">
+                                    <div class="bg-primary rounded py-2 px-3 mb-2">
+                                        <p class="text-small mb-0 text-white"> Test</p>
+                                    </div>
+                                    <p class="small text-muted">12:00 PM | Aug 13</p>
+                                </div>
+                            </div>
+
+                            <!-- Sender Message-->
+                            <div class="media w-50 mb-3">
+                                <img src="https://res.cloudinary.com/mhmd/image/upload/v1564960395/avatar_usae7z.svg" alt="user" width="50" class="rounded-circle">
+                                <div class="media-body ml-3">
+                                    <div class="bg-light rounded py-2 px-3 mb-2">
+                                        <p class="text-small mb-0 text-muted">Test,</p>
+                                    </div>
+                                    <p class="small text-muted">12:00 PM | Aug 13</p>
+                                </div>
+                            </div>
+
+                            <!-- Reciever Message-->
+                            <div class="media w-50 ml-auto mb-3">
+                                <div class="media-body">
+                                    <div class="bg-primary rounded py-2 px-3 mb-2">
+                                        <p class="text-small mb-0 text-white">Test</p>
+                                    </div>
+                                    <p class="small text-muted">12:00 PM | Aug 13</p>
+                                </div>
+                            </div>
+
+                        </div>
+
+                        <!-- Typing area -->
+                        <form action="#" class="bg-light">
+                            <div class="input-group">
+                                <input type="text" placeholder="Type a message" aria-describedby="button-addon2" class="form-control rounded-0 border-0 py-4 bg-light">
+                                <div class="input-group-append">
+                                    <button id="button-addon2" type="submit" class="btn btn-link"> <i class="fa fa-paper-plane"></i></button>
+                                </div>
+                            </div>
+                        </form>
+
                     </div>
                 </div>
-
-
-
             </div>
-        </section>
-        <script src="~/assets/js/jquery.min.js"></script>
-        <script src="~/assets/bootstrap/js/bootstrap.min.js"></script>
+        </div>
     </div>
-
+        <script src="assets/js/jquery.min.js"></script>
+        <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/js/swiper.jquery.min.js"></script>
+        <script src="assets/js/script.min.js"></script>
 </body>
 
 </html>
