--- a/projetest/Views/Home/unity.cshtml
+++ b/projetest/Views/Home/unity.cshtml
@@ -39,6 +39,8 @@
     <!-- Sparkline -->
     <script src="/js/sparkline.js"></script>
     <!-- JQVMap -->
+    <script src="/js/jquery.vmap.min.js"></script>
+    <script src="/js/jquery.vmap.turkey.js"></script>
     <!-- jQuery Knob Chart -->
     <script src="/js/jquery.knob.min.js"></script>
     <!-- daterangepicker -->
@@ -52,8 +54,6 @@
     <script src="/js/jquery.overlayScrollbars.min.js"></script>
     <!-- AdminLTE App -->
     <script src="/js/adminlte.js"></script>
-    <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-    <script src="/js/dashboard.js"></script>
     <!-- AdminLTE for demo purposes -->
     <script src="/js/demo.js"></script>
 </body>
