map template added

--- a/projetest/Views/Home/harita.cshtml
+++ b/projetest/Views/Home/harita.cshtml
@@ -27,58 +27,16 @@
 <body>
         <div class="content-wrapper bg-transparent">
             <div class="row">
-                <div class="col-lg-3 col-6">
-                    <!-- small box -->
-                    <div class="small-box bg-transparent">
-                        <div class="inner">
-                            <h3> 15 <sup style="text-decoration-color: azure;font-size: 20px; color: azure;"></sup></h3>
-
-                            <p style="text-decoration-color:azure ">Aktif Kullanıcı</p>
-                        </div>
-                    </div>
-                </div>
+                <iframe src="https://www.google.com/maps/d/embed?mid=1lTTnmUZc_MbqcHi0PSjDgt4tGJA" width="1260" height="720"></iframe>
             </div>
             <div class="row">
-                <div>
-                    <!-- small box -->
-                    <div class="bg-transparent">
-                        <div class="inner">
-
-                            <h3>.   7 Tepe İstanbul'a Hoşgeldiniz<sup style="font-size: 20px"></sup></h3>
-
-                            <pre style="text-decoration-color:aliceblue;outline-color:aliceblue; font-style:italic;">
-                    Sana dün bir tepeden baktım aziz İstanbul!
-                    Görmedim gezmediğim, sevmediğim hiçbir yer.
-                    Ömrüm oldukça, gönül tahtıma keyfince kurul!
-                    Sade bir semtini sevmek bile bir ömre değer.
-
-                    Nice revnaklı şehirler görülür dünyada,
-                    Lakin efsunlu güzellikleri sensin yaratan.
-                    Yaşamıştır derim, en hoş ve uzun rü’yada
-                    Sende çok yıl yaşayan, sende ölen, sende yatan.
-</pre>
-                        </div>
-                    </div>
-
-                </div><div>
-                    <!-- small box -->
-                    <div class="bg-transparent">
-                        <div class="inner">
-
-                            <h3><sup style="font-size: 20px">.</sup></h3>
-
-                            <pre style="text-decoration-color:azure;outline-color:aqua ; font-style:italic;">
-                                
-</pre>
-                        </div>
-                    </div>
-
+                
                 </div>
             </div>
 
             <script src="~/assets/js/jquery.min.js"></script>
             <script src="~/assets/bootstrap/js/bootstrap.min.js"></script>
-        </div>
+        
 
 </body>
 
