--- a/projetest/Views/Shared/_Layout.cshtml
+++ b/projetest/Views/Shared/_Layout.cshtml
@@ -94,7 +94,7 @@
                                 </a>
                             </li>
                             <li class="nav-item ml-lg-5">
-                                <a asp-action="Yapiliyor" class="nav-link">
+                                <a asp-action="harita" class="nav-link">
                                     <i class="fa fa-map nav-icon text-white"></i>
                                     <p>Harita</p>
                                 </a>
