Mekan AR application added

--- a/projetest/Views/Shared/_Layout.cshtml
+++ b/projetest/Views/Shared/_Layout.cshtml
@@ -48,15 +48,15 @@
         <a asp-action="Index" class="brand-link">
             <img src="~/images/ic02.jpeg" alt="logo"
                  style="height:60px; width:auto;">
-            <span class="brand-text" style="font-weight:500; color:white; font-size:1.3em;">Proje Test</span>
-        </a><span><a href="https://github.com/KayaTS" rel="nofollow">Kaya</a></span>
+            <span class="brand-text" style="font-weight:500; color:white; font-size:1.3em;">Yedi Test</span>
+        </a><span><a href="https://github.com/KayaTS/ProjeTestSite" rel="nofollow">Proje</a></span>
         <!-- Sidebar -->
         <div class="sidebar">
             <!-- Sidebar user (optional) -->
             <div class="user-panel mt-3 pb-3 mb-3 d-flex">
                 @*<div class="image">
-                        <img src="/images/noface.png" class="img-circle elevation-2" alt="User Image">
-                    </div>*@
+                    <img src="/images/noface.png" class="img-circle elevation-2" alt="User Image">
+                </div>*@
                 <div class="info">
                     <a asp-action="Profil" class="d-block">
                         <i class="nav-icon fa fa-male text-blue"></i> Profilim
@@ -69,28 +69,28 @@
             <nav class="mt-2">
                 <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
                     <!-- Add icons to the links using the .nav-icon class
-    with font-awesome or any other icon font library -->
+                with font-awesome or any other icon font library -->
 
 
                     <li class="nav-item has-treeview">
                         <a href="#" class="nav-link">
                             <i class="nav-icon fa fa-gamepad text-purple"></i>
                             <p>
-                                Oyun
+                                İçerik
                                 <i class="fa fa-angle-right"></i>
                             </p>
                         </a>
                         <ul class="nav nav-treeview">
                             <li class="nav-item ml-lg-5">
-                                <a asp-action="unity" class="nav-link">
+                                <a asp-action="mekan" class="nav-link">
                                     <i class="fa fa-play nav-icon text-danger"></i>
-                                    <p>Devam Et</p>
+                                    <p>Mekanlar</p>
                                 </a>
                             </li>
                             <li class="nav-item ml-lg-5">
                                 <a asp-action="unity" class="nav-link">
                                     <i class="fa fa-user-plus nav-icon text-blue"></i>
-                                    <p>Yeni Oyuna Başla</p>
+                                    <p>Oyun</p>
                                 </a>
                             </li>
                             <li class="nav-item ml-lg-5">
@@ -145,30 +145,6 @@
                             <i class="fa fa-comments nav-icon text-green"></i>
                             <p>
                                 Mesajlar
-                            </p>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a asp-action="Yapiliyor" class="nav-link">
-                            <i class="nav-icon text-green"></i>
-                            <p>
-                                Analog PID Controller
-                            </p>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a asp-action="Yapiliyor" class="nav-link">
-                            <i class="nav-icon text-green"></i>
-                            <p>
-                                Digital PID Controller
-                            </p>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a asp-action="Yapiliyor" class="nav-link">
-                            <i class="nav-icon text-green"></i>
-                            <p>
-                                PID Parameters 
                             </p>
                         </a>
                     </li>
