--- a/kayaseker/Views/Home/Istanbul.cshtml
+++ b/kayaseker/Views/Home/Istanbul.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿@model List<kayaseker.DAL.Entities.MediaPicture> 
+
+<!DOCTYPE html>
 
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
@@ -57,135 +59,31 @@
             <div class="container">
                 <div class="row">
                     <div class="blog-masonry masonry-true">
-                        <div class="post-masonry col-md-4 col-sm-6">
-                            <div class="post-thumb">
-                                <img src="~/img/istanbul.jpg" style="background-size:cover;" alt="" />
-                                <div class="title-over">
-                                    <h4><a href="#">İstanbul Hatırası</a></h4>
-                                </div>
-                                <div class="post-hover text-center">
-                                    <div class="inside">
-                                        <i class="fa fa-heart">7</i>
-                                        <span class="date">20 Mayıs 2019</span>
-                                        <h4><a asp-action="uyeprofil">@@muslumgurses</a></h4>
-                                        <p>İstanbul'daki ilk günümden bir fotoğraf.</p>
+                        @foreach (var picture in Model)
+                        {
+                            <div class="post-masonry col-md-4 col-sm-6">
+                                <div class="post-thumb">
+                                    <img src="~/medya/@picture.ImageData" style="background-size:cover;" alt="" />
+                                    <div class="title-over">
+                                        <h4><a href="#">@picture.Title</a></h4>
+                                    </div>
+                                    <div class="post-hover text-center">
+                                        <div class="inside">
+                                            <div class="details"><span class="date">@picture.LogDate</span><span class="likes"><i class="fa fa-heart"><a href="#" class="likeThis">@picture.Like</a></i></span> <span class="comments"><a href="#">0</a></span> </div>
+                                            <h4><a asp-action="uyeprofil">@picture.Owner</a></h4>
+                                            <p>@picture.Description</p>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                        </div> <!-- /.post-masonry -->
-                        <div class="post-masonry col-md-4 col-sm-6">
-                            <div class="post-thumb">
-                                <img src="~/img/İstanbul2.jpg" style="background-size:cover;" alt="" />
-                                <div class="title-over">
-                                    <h4><a href="#">Güzel bir gün</a></h4>
-                                </div>
-                                <div class="post-hover text-center">
-                                    <div class="inside">
-                                        <i class="fa fa-heart">18</i>
-                                        <span class="date">1 Mart 2021</span>
-                                        <h4><a asp-action="uyeprofil">@@ahmetkaya</a></h4>
-                                        <p>İstanbul Çok Güzel!</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div> <!-- /.post-masonry -->
+                            </div> <!-- /.post-masonry -->
+                        }
 
-                        <div class="post-masonry col-md-4 col-sm-6">
-                            <div class="post-thumb">
-                                <img src="~/img/istanbul.jpg" style="background-size:cover;" alt="" />
-                                <div class="title-over">
-                                    <h4><a href="#">İstanbul'u çok sevdim</a></h4>
-                                </div>
-                                <div class="post-hover text-center">
-                                    <div class="inside">
-                                        <i class="fa fa-heart"> 10 </i>
-                                        <span class="date">20 Aralık 2019</span>
-                                        <h4><a asp-action="uyeprofil">@@Muazzezersoy</a></h4>
-                                        <p>İstanbul'a geldim.</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div> <!-- /.post-masonry -->
-                        <div class="post-masonry col-md-4 col-sm-6">
-                            <div class="post-thumb">
-                                <img src="~/img/istanbul.jpg" style="background-size:cover;" alt="" />
-                                <div class="title-over">
-                                    <h4><a href="#">İstanbul Hatırası</a></h4>
-                                </div>
-                                <div class="post-hover text-center">
-                                    <div class="inside">
-                                        <i class="fa fa-heart">7</i>
-                                        <span class="date">20 Mayıs 2019</span>
-                                        <h4><a asp-action="uyeprofil">@@muslumgurses</a></h4>
-                                        <p>İstanbul'daki ilk günümden bir fotoğraf.</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div> <!-- /.post-masonry -->
-                        <div class="post-masonry col-md-4 col-sm-6">
-                            <div class="post-thumb">
-                                <img src="~/img/İstanbul2.jpg" style="background-size:cover;" alt="" />
-                                <div class="title-over">
-                                    <h4><a href="#">Güzel bir gün</a></h4>
-                                </div>
-                                <div class="post-hover text-center" style="">
-                                    <div class="inside">
-                                        <i class="fa fa-heart">18</i>
-                                        <span class="date">1 Mart 2021</span>
-                                        <h4><a asp-action="uyeprofil">@@ahmetkaya</a></h4>
-                                        <p>İstanbul Çok Güzel!</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div> <!-- /.post-masonry -->
-
-                        <div class="post-masonry col-md-4 col-sm-6">
-                            <div class="post-thumb">
-                                <img src="~/img/istanbul.jpg" style="background-size:cover;" alt="" />
-                                <div class="title-over">
-                                    <h4><a href="#">İstanbul'u çok sevdim</a></h4>
-                                </div>
-                                <div class="post-hover text-center">
-                                    <div class="inside">
-                                        <i class="fa fa-heart"> 10 </i>
-                                        <span class="date">20 Aralık 2019</span>
-                                        <h4><a asp-action="uyeprofil">@@Muazzezersoy</a></h4>
-                                        <p>İstanbul'a geldim.</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div> <!-- /.post-masonry -->
 
                     </div>
                 </div>
             </div>
         </div>
-        <div class="container">
-            <div class="row element-animate mt-3">
-                <div class="col-md-4 mt-lg-5 mb-3">
-                    <form method="post" id="profileimage" asp-action="UploadPicture" enctype="multipart/form-data">
-                        <div class="card card-primary card-outline">
-                            <div class="card-body box-profile">
-                                <div class="text-center">
-                                    <div class="row d-flex align-items-center justify-content-center">
-                                        <img class="profile-user-img img-fluid img-circle"
-                                             style="max-width:250px; height: auto; margin:auto;" src="/medya/" />
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row d-flex align-items-center justify-content-center m-3">
-
-                            <label for="profileimg" class="btn btn-outline-light"><i class="fa fa-eye">Yeni Fotoğraf Yükle</i></label>
-                            <small>Tercihen 250x250 boyutunda ve kare fotoğraflar ekleyin</small>
-                            <small>Yeni fotoğraf ekledikten sonra kaydet tuşuna basınız. Değişiklik o zaman görünecek</small>
-                            <input type="file" name="file" multiple="multiple" id="profileimg" class="form-control-file" style="display:none;" required>
-                            <input type="submit" class="btn btn-primary" value="Kaydet">
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
+    
 
         <!-- FOOTER -->
         <footer class="site-footer">
