--- a/kayaseker/Areas/uye/Views/Home/Profil.cshtml
+++ b/kayaseker/Areas/uye/Views/Home/Profil.cshtml
@@ -11,7 +11,7 @@
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
-    <title>İSTANBUL</title>
+    <title>Profil</title>
     <link href="~/assets/istanbul/nicepage.css" rel="stylesheet" media="screen" />
     <link href="~/assets/istanbul/İSTANBUL.css" rel="stylesheet" media="screen" />
     <script class="u-script" type="text/javascript" src="~/assets/istanbul/jquery.js" defer=""></script>
@@ -60,22 +60,22 @@
                 <div class="u-custom-menu u-nav-container">
                     <ul class="u-custom-font u-nav u-spacing-20 u-text-font u-unstyled u-nav-1">
                         <li class="u-nav-item">
-                            <a class="u-active-grey-75 u-border-5 u-border-active-grey-70 u-border-grey-90 u-border-hover-grey-90 u-button-style u-grey-90 u-hover-grey-40 u-nav-link u-radius-12 u-text-active-grey-30 u-text-grey-50 u-text-hover-custom-color-6" href="Home.html" style="padding: 10px;">GİRİŞ</a>
+                            <a class="u-active-grey-75 u-border-5 u-border-active-grey-70 u-border-grey-90 u-border-hover-grey-90 u-button-style u-grey-90 u-hover-grey-40 u-nav-link u-radius-12 u-text-active-grey-30 u-text-grey-50 u-text-hover-custom-color-6" asp-action="Index" asp-area="default" style="padding: 10px;">Anasayfa</a>
                         </li>
                         <li class="u-nav-item">
-                            <a class="u-active-grey-75 u-border-5 u-border-active-grey-70 u-border-grey-90 u-border-hover-grey-90 u-button-style u-grey-90 u-hover-grey-40 u-nav-link u-radius-12 u-text-active-grey-30 u-text-grey-50 u-text-hover-custom-color-6" href="İSTANBUL.html" style="padding: 10px;">İSTANBUL</a>
+                            <a class="u-active-grey-75 u-border-5 u-border-active-grey-70 u-border-grey-90 u-border-hover-grey-90 u-button-style u-grey-90 u-hover-grey-40 u-nav-link u-radius-12 u-text-active-grey-30 u-text-grey-50 u-text-hover-custom-color-6" asp-action="İstanbul2" asp-area="default" style="padding: 10px;">İstanbul</a>
                         </li>
                         <li class="u-nav-item">
-                            <a class="u-active-grey-75 u-border-5 u-border-active-grey-70 u-border-grey-90 u-border-hover-grey-90 u-button-style u-grey-90 u-hover-grey-40 u-nav-link u-radius-12 u-text-active-grey-30 u-text-grey-50 u-text-hover-custom-color-6" href="HARİTA.html" style="padding: 10px;">HARİTA</a>
+                            <a class="u-active-grey-75 u-border-5 u-border-active-grey-70 u-border-grey-90 u-border-hover-grey-90 u-button-style u-grey-90 u-hover-grey-40 u-nav-link u-radius-12 u-text-active-grey-30 u-text-grey-50 u-text-hover-custom-color-6" asp-action="Harita" asp-area="default" style="padding: 10px;">Harita</a>
                         </li>
                         <li class="u-nav-item">
-                            <a class="u-active-grey-75 u-border-5 u-border-active-grey-70 u-border-grey-90 u-border-hover-grey-90 u-button-style u-grey-90 u-hover-grey-40 u-nav-link u-radius-12 u-text-active-grey-30 u-text-grey-50 u-text-hover-custom-color-6" href="YAPILAR.html" style="padding: 10px;">YAPILAR</a>
+                            <a class="u-active-grey-75 u-border-5 u-border-active-grey-70 u-border-grey-90 u-border-hover-grey-90 u-button-style u-grey-90 u-hover-grey-40 u-nav-link u-radius-12 u-text-active-grey-30 u-text-grey-50 u-text-hover-custom-color-6" asp-action="Yapilar" asp-area="default" style="padding: 10px;">Yapılar</a>
                         </li>
                         <li class="u-nav-item">
-                            <a class="u-active-grey-75 u-border-5 u-border-active-grey-70 u-border-grey-90 u-border-hover-grey-90 u-button-style u-grey-90 u-hover-grey-40 u-nav-link u-radius-12 u-text-active-grey-30 u-text-grey-50 u-text-hover-custom-color-6" style="padding: 10px;">OYUN</a>
+                            <a class="u-active-grey-75 u-border-5 u-border-active-grey-70 u-border-grey-90 u-border-hover-grey-90 u-button-style u-grey-90 u-hover-grey-40 u-nav-link u-radius-12 u-text-active-grey-30 u-text-grey-50 u-text-hover-custom-color-6" asp-action="Unity" asp-area="default" style="padding: 10px;">Oyun</a>
                         </li>
                         <li class="u-nav-item">
-                            <a class="u-active-grey-75 u-border-5 u-border-active-grey-70 u-border-grey-90 u-border-hover-grey-90 u-button-style u-grey-90 u-hover-grey-40 u-nav-link u-radius-12 u-text-active-grey-30 u-text-grey-50 u-text-hover-custom-color-6" style="padding: 10px;">MAĞAZA</a>
+                            <a class="u-active-grey-75 u-border-5 u-border-active-grey-70 u-border-grey-90 u-border-hover-grey-90 u-button-style u-grey-90 u-hover-grey-40 u-nav-link u-radius-12 u-text-active-grey-30 u-text-grey-50 u-text-hover-custom-color-6" asp-action="Magaza" asp-area="default" style="padding: 10px;">Mağaza</a>
                         </li>
                     </ul>
                 </div>
