--- a/kayaseker/Views/Home/Harita.cshtml
+++ b/kayaseker/Views/Home/Harita.cshtml
@@ -64,7 +64,7 @@
     <section class="u-clearfix u-white u-section-2" id="sec-e251">
         <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
             <div class="u-clearfix u-custom-html u-custom-html-1">
-                <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1xdw9JzhfyNkIfNn0wFzz1J5shkOWgGhF" width="1000" "=" " height="800"></iframe>
+                <iframe src="https://www.google.com/maps/d/embed?mid=1p3n9hzEPWQqnhJlAfzy15upIi6XPiVd7" width="960" height="720"></iframe>
             </div>
         </div>
     </section>
