--- a/kayaseker/Views/Home/Yapilar.cshtml
+++ b/kayaseker/Views/Home/Yapilar.cshtml
@@ -109,7 +109,7 @@
                     <div class="u-container-style u-list-item u-repeater-item">
                         <div class="u-container-layout u-similar-container u-container-layout-1">
                             <img src="~/assets/template-assets/images/HDwallpaper_cityHagiaSophiaIstanbulturkey.jpg" alt="" class="u-image u-image-default u-image-1" data-image-width="1600" data-image-height="900">
-                            <h2 class="u-text u-text-2">Ayasfoya Cami</h2>
+                            <h2 class="u-text u-text-2">Ayasofya Cami</h2>
                             <a asp-action="ayasofya" data-page-id="12775519" class="u-btn u-btn-round u-button-style u-hover-palette-3-light-1 u-palette-3-light-2 u-radius-50 u-text-palette-3-dark-2 u-btn-1">Daha Fazlası...</a>
                         </div>
                     </div>
