--- a/kayaseker/wwwroot/assets/template-assets/AYASOFYA-CAMİ - Kopya.css
+++ b/kayaseker/wwwroot/assets/template-assets/AYASOFYA-CAMİ - Kopya.css
@@ -1,21 +1,21 @@
 .u-section-1 {
-  min-height: auto;
+  min-height: 1901px;
 }
 
 .u-section-1 .u-shape-1 {
-  height: auto;
+  height: 557px;
   margin-top: 0;
   margin-bottom: 0;
   background-image: none;
 }
 
 .u-section-1 .u-layout-wrap-1 {
-  width: auto;
+  width: 1140px;
   margin: -412px auto 0;
 }
 
 .u-section-1 .u-layout-cell-1 {
-  min-height: auto;
+  min-height: 903px;
 }
 
 .u-section-1 .u-container-layout-1 {
@@ -31,7 +31,7 @@
 }
 
 .u-section-1 .u-image-1 {
-  min-height: auto;
+  min-height: 903px;
   background-image: linear-gradient(0deg, rgba(213,244,244,0.2), rgba(213,244,244,0.2)), url("images/ayasofya43.png");
   background-position: 50% 36%;
 }
@@ -42,7 +42,7 @@
 
 .u-section-1 .u-image-2 {
   background-image: url("images/ayasofya1.png");
-  min-height: auto;
+  min-height: 903px;
   background-position: 50% 87.74%;
 }
 
@@ -53,20 +53,20 @@
 
 .u-section-1 .u-layout-cell-4 {
   background-image: none;
-  min-height: auto;
+  min-height: 903px;
 }
 
 .u-section-1 .u-container-layout-4 {
-  padding-left: %15;
+  padding-left: 15px;
   padding-right: 0;
 }
 
 .u-section-1 .u-line-1 {
-  width: auto;
-  height: %8;
+  width: 123px;
+  height: 8px;
   transform-origin: left center 0px;
   position: absolute;
-  top: auto;
+  top: 376px;
   left: auto;
   right: 0;
 }
@@ -78,13 +78,13 @@
 .u-section-1 .u-btn-1 {
   background-image: none;
   border-style: none;
-  font-weight: auto;
+  font-weight: 700;
   margin: 70px 0 0 auto;
 }
 
-@media (min-width: 150px)  and (max-width:1500px) {
+@media (max-width: 1199px) {
   .u-section-1 {
-    min-height: auto;
+    min-height: 964px;
   }
 
   .u-section-1 .u-layout-wrap-1 {
@@ -101,24 +101,24 @@
   }
 
   .u-section-1 .u-image-1 {
-    min-height: auto;
+    min-height: 745px;
   }
 
   .u-section-1 .u-image-2 {
-    min-height: auto;
+    min-height: 745px;
   }
 
   .u-section-1 .u-layout-cell-4 {
-    min-height: auto;
+    min-height: 745px;
   }
 
   .u-section-1 .u-container-layout-4 {
-    padding-left: %16;
-    padding-right: %16;
+    padding-left: 16px;
+    padding-right: 16px;
   }
 
   .u-section-1 .u-line-1 {
-    right: auto;
+    right: 102px;
   }
 
   .u-section-1 .u-text-2 {
@@ -306,13 +306,13 @@
   }
 
   .u-section-2 .u-container-layout-1 {
-    padding-left: 13px; 
+    padding-left: 13px;
     padding-right: 13px;
   }
 
   .u-section-2 .u-image-1 {
-    width: 33%;
-    height: 65%;
+    width: 335px;
+    height: 655px;
   }
 }
 
